# MAKE_SHORT_URL

./: Cargo.toml  Dockerfile  README.md
devel_logs/: dev_comp_flag_ign.txt  rust_linking_problem_solution
src/: base62.rs  main.rs  redis_conn.rs  server.rs  test.rs
static/: handle_button.js  home.html  style.css
