[package]
name = "make_short_url"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = {version = "4.5.1"}
bb8-redis = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }

[[bin]]
name = "myUrlShortener"
path = "src/server.rs"

[lib]
name = "redis_conn"
path = "src/redis_conn.rs"
